# Workspace_ROS2_Diseno

./: README.md
src/package1/: package.xml  setup.py
src/package1/package1/: esp32_serial_node.py  firebase_node.py  trajectory_sender_node.py
src/udp_receiver/: package.xml  setup.cfg  setup.py
src/udp_receiver/udp_receiver/: tcp_receiver_node.py
